--- a/index.htm
+++ b/index.htm
@@ -141,7 +141,7 @@ tab-stops:list .5in'><![if !supportLists]><span style='font-size:16.0pt;
 mso-bidi-font-size:12.0pt'>1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span><![endif]><span style='font-size:16.0pt;mso-bidi-font-size:12.0pt'><a
 href="./fqt_archivos\cuerpo_negro.pdf">Radiación de un cuerpo negro. La
-“catástrofe” del ultravioleta</a><o:p></o:p></span></p>
+?catástrofeµ del ultravioleta</a><o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-left:1.0in;text-indent:-.5in;mso-list:l0 level1 lfo2;
 tab-stops:list .5in'><![if !supportLists]><span style='font-size:16.0pt;
