--- a/index.htm
+++ b/index.htm
@@ -6,6 +6,7 @@ xmlns:w="urn:schemas-microsoft-com:office:word"
 xmlns="http://www.w3.org/TR/REC-html40">
 
 <head>
+<meta charset="UTF-8">
 <meta http-equiv=Content-Type content="text/html; charset=windows-1252">
 <meta name=ProgId content=Word.Document>
 <meta name=Generator content="Microsoft Word 9">
@@ -141,7 +142,7 @@ tab-stops:list .5in'><![if !supportLists]><span style='font-size:16.0pt;
 mso-bidi-font-size:12.0pt'>1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span><![endif]><span style='font-size:16.0pt;mso-bidi-font-size:12.0pt'><a
 href="./fqt_archivos\cuerpo_negro.pdf">Radiación de un cuerpo negro. La
-?catástrofeµ del ultravioleta</a><o:p></o:p></span></p>
+“catástrofe” del ultravioleta</a><o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-left:1.0in;text-indent:-.5in;mso-list:l0 level1 lfo2;
 tab-stops:list .5in'><![if !supportLists]><span style='font-size:16.0pt;
