--- a/index.htm
+++ b/index.htm
@@ -2,7 +2,7 @@
 
 <head>
 <meta charset="UTF-8">
-<meta http-equiv=Content-Type content="text/html; charset=windows-1252">
+<meta http-equiv=Content-Type content="text/html">
 <meta name=Generator content="Microsoft Word 15 (filtered)">
 <title>FUNDAMENTOS DE QUÍMICA TEÓRICA</title>
 <style>
