--- a/index.htm
+++ b/index.htm
@@ -63,7 +63,7 @@
     <li><a href="fqt_archivos/partsobreanillo1.pdf">La partícula sobre un anillo</a></li>
     <li><a href="fqt_archivos/particula_sobre_esfera.pdf">La partícula sobre una esfera</a></li>
     <li><a href="fqt_archivos/oscilador_armonico.pdf">El oscilador armónico: el problema físico y su planteamiento cuántico</a></li>
-    <li><a href="../fqt_archivos/oscarm2.pdf">Solución de la ecuación de Schrödinger para el oscilador armónico: operadores de creación y aniquilación de estados</a></li>
+    <li><a href="fqt_archivos/oscarm2.pdf">Solución de la ecuación de Schrödinger para el oscilador armónico: operadores de creación y aniquilación de estados</a></li>
 </ol>
 
 <h2>El átomo monoelectrónico</h2>
