--- a/index.htm
+++ b/index.htm
@@ -77,6 +77,7 @@
     <li><a href="fqt_archivos/densidad_de_distribucion_radial.pdf">La densidad de distribución radial</a></li>
     <li><a href="fqt_archivos/analisis_radial.pdf">Análisis radial</a></li>
     <li><a href="fqt_archivos/analisis_angular.pdf">Análisis angular</a></li>
+    <li><a href="fqt_archivos/consideraciones.pdf">Consideraciones acerca de la solución del átomo de hidrógeno para la Química Computacional</a></li>
     <li><a href="fqt_archivos/VirialMecanicoCuantico.pdf">El teorema de virial en mecánica cuántica</a></li>
 </ol>
 
